--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>net.steppschuh.markdowngenerator</groupId>
+            <artifactId>markdowngenerator</artifactId>
+            <version>1.3.1.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>${jetbrains-annotations.version}</version>
@@ -95,6 +101,8 @@
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
+
+
     </dependencies>
 
     <build>
